# rsvp

./: .gitignore  .gitmodules  Makefile  README.md  circle.yml  default.nix  stack.yaml
backend/: backend.cabal  default.nix  package.yaml  packages.nix
backend/cmd/: Main.hs
backend/src/Rsvp/: API.hs  Response.hs  Server.hs
backend/src/Rsvp/API/: .#Response.hs  Internal.hs
backend/src/Rsvp/Server/: Cli.hs  Config.hs  Handlers.hs  Instrument.hs  Logging.hs  Models.hs
backend/tests/: Main.hs
frontend/: Makefile  README.md  default.nix  frontend.cabal  package.json  packages.nix  stack.yaml
frontend/exe/: Main.hs
frontend/src/: Common.hs  Component.hs  Lib.hs  Request.hs  Widget.hs
frontend/src/Widget/: Types.hs
frontend/static/scss/: style.scss
rsvp-api/: package.yaml  rsvp-api.cabal
rsvp-api/src/Rsvp/: API.hs
rsvp-api/src/Rsvp/API/: Internal.hs
rsvp-api/tests/: Main.hs
rsvp-server/: package.yaml  rsvp-server.cabal
rsvp-server/src/Rsvp/: Server.hs
rsvp-server/src/Rsvp/Server/: Config.hs  Handlers.hs  Logging.hs  Models.hs
rsvp-server/tests/: Main.hs
scripts/: build-image
shared/: default.nix  package.yaml  packages.nix  shared.cabal
shared/src/Auth/: Client.hs
shared/src/Data/: Base64ByteString.hs
shared/src/Shared/: Models.hs  Types.hs
