name: frontend
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 tippenein <tippenein@gmail.com>
maintainer: tippenein <tippenein@gmail.com>
synopsis: TODO
description: TODO
category: TODO
author: tippenein <tippenein@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/tippenein/rsvp/frontend

library
  hs-source-dirs:      src
  exposed-modules:
      Lib
    , Widget
    , Common

  build-depends:
      base
    , text
    , time
    , transformers
    , lens
    , ghcjs-base
    , ghcjs-dom
    , haskell-src-exts >= 1.16 && < 1.18
    , reflex
    , reflex-dom
    , containers == 0.5.*
    , safe == 0.3.*
  default-language:    Haskell2010
  ghc-options: -fno-warn-missing-signatures

executable frontend
  hs-source-dirs:      exe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-missing-signatures
  build-depends:
      base
    , frontend -any
    , aeson
    , time
    , haskell-src-exts >= 1.16 && < 1.18
    , reflex
    , reflex-dom
    , containers == 0.5.*
    , safe == 0.3.*
  default-language: Haskell2010u
